<resources>
    <string name="app_name">Lactoferrin Trial BLF-T</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sectiona_mainheading">سیکشن ـ اے: ذاتی معلومات</string>
    <string name="sectionb_mainheading">سیکشن ـ بی:  سماجی آبادیاتی خصوصیات</string>
    <string name="sectionc_mainheading">سیکشن سی: سے پہلے پیشہ ورانہ / کام کی خصوصیاتCOVID-19 </string>
    <string name="sectiond_mainheading">سیکشن ڈی:  اسکول کی خصوصیات (اسکول / کالج / یونیورسٹی کا مقام</string>
    <string name="a01">انٹرویو کی تاریخ</string>
    <string name="a02">انٹرویو شروع کرنے کا وقت(24 گھنٹوں میں)</string>
    <string name="a03">انٹرویو لینے والے کا کوڈ</string>
    <string name="a04">صوبہ؟</string>
    <string name="a0401">خیبر پختونخوا </string>
    <string name="a0402">پنجاب</string>
    <string name="a0403">سندھ</string>
    <string name="a0404">بلوچستان</string>
    <string name="a0405">فاٹا</string>
    <string name="a0406">آزاد جموں کشمیر </string>
    <string name="a0407">گلگت بلتستان </string>
    <string name="a05">ضلع؟</string>
    <string name="a05a">فرد کی شناختی  آئی ڈی</string>
    <string name="a05b">کیا گھر اور فرد کی شناخت ہو گئی</string>
    <string name="a05b1">ہاں</string>
    <string name="a05b2">نہیں</string>
    <string name="a06">  گھرانے کے انٹرویوکا نتیجہ: نوٹ: انٹرویو مکمل نہ ہونے کی صورت میں سپروائزر سے رابطہ کریں۔ </string>
    <string name="a06_info"> انٹرویو مکمل نہ ہونے  کی صورت میں سپروائزر سے رابطہ کریں ۔ </string>
    <string name="a0601">مکمل</string>
    <string name="a0602">فرد کی شناخت نہیں ہو سکی</string>
    <string name="a0603">گھر کی شناخت نہیں ہو سکی </string>
    <string name="a0604">گھر بند ہے</string>
    <string name="a0605">گھر میں کوئی اہل جواب دہندہ موجود نہیں</string>
    <string name="a0606">گھر طویل مدت سے بند ہے</string>
    <string name="a0607">انکار کردیا </string>
    <string name="a0608">فون پر رابطہ نہیں ہوسکا </string>
    <string name="a0696">دیگر(وضاحت کریں)</string>
    <string name="a07">کیا میں انٹرویو شروع کر سکتا /سکتی ہوں؟</string>
    <string name="a0701">ہاں</string>
    <string name="a0702">نہیں</string>
    <string name="a08"> پورا نام؟</string>
    <string name="a09">باپ/شوہر کا نام؟</string>
    <string name="a10">رہائشی پتہ (جنوری -2020 کے بعد سے) شہر / گاؤں کے ساتھ؟</string>
    <string name="a11">رابطہ نمبر؟</string>
    <string name="a12">رہائشی علائقہ؟</string>
    <string name="a1201">شہری </string>
    <string name="a1202">دیہی</string>
    <string name="a13">آپ کی تاریخ پیدائش کیا ہے؟</string>
    <string name="a13dd">دن</string>
    <string name="a13mm">مہینہ</string>
    <string name="a13yy">سال</string>
    <string name="a14">آپ کی عمر کتنی ہے؟</string>
    <string name="a14mm">مہینہ</string>
    <string name="a14yy">سال</string>
    <string name="a15">آپ کی جنس کیا ہے؟</string>
    <string name="a1501">مرد(لڑکا) </string>
    <string name="a1502">عورت(لڑکی) </string>
    <string name="a1503">تیسری جنس </string>
    <string name="a16">آپ کون سی قومیت سے تعلق رکھتے ہیں؟</string>
    <string name="a1601">سندھی</string>
    <string name="a1602">اردو</string>
    <string name="a1603">پنجابی</string>
    <string name="a1604">بلوچ/براہوی</string>
    <string name="a1605">پشتون</string>
    <string name="a1606">سرائیکی </string>
    <string name="a1607">کشمیری</string>
    <string name="a1608">ہزارہ </string>
    <string name="a1609">برشو</string>
    <string name="a16096">دیگر(وضاحت کریں) </string>
    <string name="a17">آپ کی ذات کیا ہے؟</string>
    <string name="a18">آپ کس مذہب کے پیروکارہیں؟</string>
    <string name="a1801">مسلمان </string>
    <string name="a1802">عیسائی </string>
    <string name="a1803">ہندو </string>
    <string name="a1804">سکھ </string>
    <string name="a18096">دیگر(وضاحت کریں)</string>
    <string name="a19">آپ کی زیادہ سے زیادہ تعلیم کیا ہے؟</string>
    <string name="a1901">کوئی تعلیم نہیں </string>
    <string name="a1902">صرف قرآنی تعلیم </string>
    <string name="a1903">پرائمری اسکول (1-4 سال) </string>
    <string name="a1904">پرائمری اسکول (5 سال) مکمل </string>
    <string name="a1905">سیکنڈری اسکول (6-9 سال) </string>
    <string name="a1906">سیکنڈری اسکول (10 سال) مکمل </string>
    <string name="a1907">ہائی اسکول (11-12 سال) </string>
    <string name="a1908">بیچلر ڈگری (14 سال) </string>
    <string name="a1909">ماسٹرزڈگری (16 سال) </string>
    <string name="a1910">پی ایچ ڈی </string>
    <string name="a1911">تکنیکی تعلیم </string>
    <string name="a19096">دیگر(وضاحت کریں</string>
    <string name="a20">آپ کی ازدواجی حیثیت کیا ہے؟</string>
    <string name="a2001">غیرشادی شدہ </string>
    <string name="a2002">شادی شدہ </string>
    <string name="a2003">طلاق یافتہ </string>
    <string name="a2004">الگ ہونا </string>
    <string name="a2005">بیوہ/رنڈوا</string>
    <string name="a21"> آپ کا بنیادی پیشہ تجارت کونسا ہے؟</string>
    <string name="a2101">پیشہ ور (اکاؤنٹنٹ، انجینئر، ڈاکٹر) </string>
    <string name="a2102">انتظامی اور تکنیکی/انٹرمیڈیٹ مارکیٹنگ اور سیلز مینیجرز، اساتذہ، صحافی، نرسیں) </string>
    <string name="a2103">غیر دستی ہنر مند (کلرکس ، دکان کے معاونین ، کیشیئر) </string>
    <string name="a2104">دستی ہنر مند (ترخان، ڈرائیور، باورچی) </string>
    <string name="a2105">جزوی طور پر ہنرمند (سیکیورٹی گارڈز، مشین آپریٹرز، کسان) </string>
    <string name="a2106">غیر ہنر مند (مزدور، کلینر) </string>
    <string name="a2107">طالب علم </string>
    <string name="a2108">بے روزگار </string>
    <string name="a2109">گھریلو خاتون </string>
    <string name="a2110">پری اسکول </string>
    <string name="a2111">چائلڈ لیبر(15 سال سے کم کام کرنے والا بچہ) </string>
    <string name="a21096">دیگر(وضاحت کریں</string>
    <string name="a22">آپ کا مخصوص پیشہ(پوزیشن، عہدہ اور تنظیم کے نام سمیت) کیا ہے؟</string>
    <string name="a22pos">عہدہ</string>
    <string name="a22org">ادارے کا نام </string>
    <string name="a23">کیا آپ جنوری 2020 کے بعد جیل میں یا قانون نافذ کرنے والے اداروں کی تحویل میں رہے ہیں؟</string>
    <string name="a2301">ہاں</string>
    <string name="a2302">نہیں</string>
    <string name="b01">کیا پاکستان کے علاوہ آپ کے پاس کسی اور ملک کی  شہریت ہے یا بیرون ملک مقیم ہیں؟</string>
    <string name="b0101">ہاں</string>
    <string name="b0102">نہیں</string>
    <string name="b02">کون سا ملک؟</string>
    <string name="b03">پاکستان آنے کی وجہ؟</string>
    <string name="b0301">کام </string>
    <string name="b0302">کنبہ </string>
    <string name="b0303">سیاحت </string>
    <string name="b0304">پناہ گزین </string>
    <string name="b0305">اب یہاں آباد ہیں </string>
    <string name="b03096">دیگر(وضاحت کریں</string>
    <string name="b04">آپ جس گھر میں رہتے ہیں اس کے مالک ہیں یا کرایہ دار ہیں؟</string>
    <string name="b0401">مالک </string>
    <string name="b0402">کرایہ دار </string>
    <string name="b0403">بے گھر </string>
    <string name="b04096">دیگر(وضاحت کریں)</string>
    <string name="b05">مکان کی قسم؟</string>
    <string name="b0501">گھر </string>
    <string name="b0502">بنگلہ </string>
    <string name="b0503">فلیٹ/اپارٹمنٹ </string>
    <string name="b0504">جھوپڑی </string>
    <string name="b05096">دیگر(وضاحت کریں</string>
    <string name="b06">گھر کے رہائشی حصے کا رقبہ اندازً کتناہے؟</string>
    <string name="b06_info">(مربع فٹ/گز)</string>
    <string name="b06ft">اسکوائر  فٹ</string>
    <string name="b06yrd">مربع گز</string>
    <string name="b06a">رقبہ</string>
    <string name="b07">آپ کے گھرمیں  کل کتنے خاندان رہتے ہیں؟</string>
    <string name="b08">آپ کے گھرمیں رہنے والے  افرادکی  مجموعئی تعداد کیا ہے ؟</string>
    <string name="b08_info">(جنوری 2020 سے مستقل رہائش پزیر افراد)</string>
    <string name="b0801">بزرگ مرد (70 سال اور اس سے اوپر) </string>
    <string name="b0802">بزرگ خواتین (70 سال اور اس سے اوپر) </string>
    <string name="b0803">بالغ مرد (18 سے 69 سال) </string>
    <string name="b0804">بالغ خواتین (18 سے 69 سال) </string>
    <string name="b0805">مرد (0-17 سال) </string>
    <string name="b0806">خواتین (0-17 سال) </string>
    <string name="b0807">کل افراد</string>
    <string name="b9">گھر کے کتنے افراد معاوضے کے لئے کام کرتے ہیں/کماتے ہیں؟</string>
    <string name="b10">آپ کے گھرانے کی اندازاً سالانہ آمدنی کتنی ہے؟ روپے</string>
    <string name="b11ws">آپ کے گھر میں پینے کے پانی کا سب سے اہم ذریعہ کیا ہے ؟</string>
    <string name="b11mc">میونسپل کمیٹی کا پانی کاکنکشن </string>
    <string name="b11">پینے کے پانی کا اہم ذریعہ</string>
    <string name="b011t01">ہاں</string>
    <string name="b1101">گھر میں لگا نلکا </string>
    <string name="b1102">اپنى چارديوارى/پلاٹ میں لگا نلکا </string>
    <string name="b1103">پڑوسی کے گھر لگا نلکا </string>
    <string name="b1104">گلی/ محلے میں لگا نلکا </string>
    <string name="b1105">فلٹریشن پلانٹ </string>
    <string name="b1106_t">زیر زمین پانی</string>
    <string name="b1106">ٹیوب ویل/ بورنگ کا پانی </string>
    <string name="b1107">ہاتھ والا نلکا </string>
    <string name="b1108_t">کنواں</string>
    <string name="b1108">محفوظ کنواں </string>
    <string name="b1109">غیرمحفوظ کنواں </string>
    <string name="b1110">بارش کا پانی </string>
    <string name="b1111">پانی کا ٹینکر </string>
    <string name="b1112">ریڑھی کے ساتھ چھوٹی ٹنکی </string>
    <string name="b1113">سطح والا پانی (دریا، جھیل، ڈیم، تالاب/ندی/نہر کا پانی) </string>
    <string name="b1114">بوتل کا پانی </string>
    <string name="b11096">دیگر(وضاحت کریں)</string>
    <string name="b011t02">نہیں</string>
    <string name="b12">آپ کے گھر انے کے افراد عام طور پر بیت الخلاء  کی کس قسم کی سہولت استعمال کرتے ہیں؟</string>
    <string name="b1201_t">فلش یا انڈیل کر پانی ڈالنے والا</string>
    <string name="b1201"> فلش سیوریج کے نظام سے منسلک </string>
    <string name="b1202">فلش سپٹک ٹینک سے منسلک </string>
    <string name="b1203">فلش گڑھےواے لیٹرین سے منسلک  </string>
    <string name="b1204">فلش کہیں اور </string>
    <string name="b1205">نامعلوم جگہ پر فلش/یقین نہیں/پتہ نہیں </string>
    <string name="b1206_t">گڑھے والا لیٹرین </string>
    <string name="b1206">بہتر ہوا دار گڑھے والا لیٹرین </string>
    <string name="b1207">گڑھے والا لیٹرین ڈھکا ہوا </string>
    <string name="b1208">گڑھے والا کھلا ہوا لیٹرین </string>
    <string name="b1209">کھادکے گڑہے والا ٹوائلٹ </string>
    <string name="b1210">بالٹی والا ٹوائلٹ </string>
    <string name="b1211">کوئی سہولت نہیں/جھاڑیوں/کھیتوں/کھلے میں</string>
    <string name="b12096">دیگر(وضاحت کریں</string>
    <string name="b13">کیا آپ  کی ملکیت میں مندرجہ ذیل اشیاء  میں سے کوئی چیزہے؟</string>
    <string name="b13_info">(ایک سے زیادہ جوابات آسکتے ہیں)</string>
    <string name="b1301">گھڑی </string>
    <string name="b130101">ہاں</string>
    <string name="b130102">نہیں</string>
    <string name="b1302">موبائل فون </string>
    <string name="b130201">ہاں</string>
    <string name="wfa30301">Minutes</string>
    <string name="wfa30302">Hours</string>
    <string name="wfa30303">Days</string>
    <string name="wfa30304">Seconds</string>
    <string name="wfb1081a">Day 1: Have u given the supplement</string>
    <string name="wfb1081a01">Yes</string>
    <string name="wfb1081a02">No</string>
    <string name="wfb1081b">Day 1: How much quantity have you given?</string>
    <string name="wfb1081b01">Full</string>
    <string name="wfb1081b02">Partial</string>
    <string name="wfb1081c">Day 1: If partial, why?</string>
    <string name="wfb1081c01">Spill</string>
    <string name="wfb1081c02">Spit</string>
    <string name="wfb1081c03">Vomit</string>
    <string name="wfb1081d">Day 1: If not given, state reason?</string>
    <string name="wfb1081d01">Respiratory distress</string>
    <string name="wfb1081d02">Sepsis</string>
    <string name="wfb1081d03">Apnea</string>
    <string name="wfb1081d04">Feeding intolerance</string>
    <string name="wfb1081d05">Missed (specify)</string>
    <string name="wfb1081d96">Others (specify)</string>
</resources>