<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            style="@style/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wfa30301" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/wfa30301"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/wfa30301"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="59"
                        app:minValue="0"
                        app:type="range" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wfa30302" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/wfa30302"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/wfa30302"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="23"
                        app:minValue="0"
                        app:type="range" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wfa30303" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/wfa30303"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/wfa30303"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="10"
                        app:minValue="0"
                        app:type="range" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/wfa30304" />

                    <com.edittextpicker.aliazaz.EditTextPicker
                        android:id="@+id/wfa30304"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:hint="@string/wfa30304"
                        android:inputType="number"
                        android:maxLength="2"
                        app:maxValue="59"
                        app:minValue="0"
                        app:type="range" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>